tests/snapshots/html_test__html_doc_files_rewrite-70.snap
---
source: tests/html_test.rs
expression: files.get(file_name).unwrap()
---
(function () {
  window.DENO_DOC_SEARCH_INDEX = {"nodes":[{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"A","file":".","doc":"","url":"././~/A.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"AbstractClass","file":".","doc":"","url":"././~/AbstractClass.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"AbstractClass.prototype.method","file":".","doc":"","url":"././~/AbstractClass.prototype.method.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"AbstractClass.prototype.getter","file":".","doc":"","url":"././~/AbstractClass.prototype.getter.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"AbstractClass.prototype.foo","file":".","doc":"","url":"././~/AbstractClass.prototype.foo.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"B","file":".","doc":"","url":"././~/B.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Bar","file":".","doc":"> Some quote in bar docs\n> This quote part is ignored\n> when getting the title of this doc\n\nBar docs","url":"././~/Bar.html","deprecated":false},{"kind":[{"char":"T","kind":"TypeAlias","title":"Type Alias"}],"name":"Baz","file":".","doc":"","url":"././~/Baz.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Baz.bar","file":".","doc":"","url":"././~/Baz.bar.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Baz.foo","file":".","doc":"","url":"././~/Baz.foo.html","deprecated":false},{"kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"EmptyInterface","file":".","doc":"","url":"././~/EmptyInterface.html","deprecated":false},{"kind":[{"char":"E","kind":"Enum","title":"Enum"}],"name":"Enum","file":".","doc":"","url":"././~/Enum.html","deprecated":false},{"kind":[{"char":"E","kind":"Enum","title":"Enum"}],"name":"Enum2","file":".","doc":"","url":"././~/Enum2.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Foo","file":".","doc":"some Foo docs {@linkcode Bar}\n","url":"././~/Foo.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.[Symbol.iterator]","file":".","doc":"","url":"././~/Foo.prototype.[Symbol.iterator].html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.getter","file":".","doc":"","url":"././~/Foo.prototype.getter.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.setter","file":".","doc":"","url":"././~/Foo.prototype.setter.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.getterAndSetter","file":".","doc":"","url":"././~/Foo.prototype.getterAndSetter.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.getterAndSetter","file":".","doc":"","url":"././~/Foo.prototype.getterAndSetter.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.staticSetter","file":".","doc":"","url":"././~/Foo.staticSetter.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.test","file":".","doc":"","url":"././~/Foo.prototype.test.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.staticMethod","file":".","doc":"","url":"././~/Foo.staticMethod.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.methodWithOverloads","file":".","doc":"","url":"././~/Foo.prototype.methodWithOverloads.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.methodWithOverloads","file":".","doc":"","url":"././~/Foo.prototype.methodWithOverloads.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.methodWithOverloads","file":".","doc":"","url":"././~/Foo.prototype.methodWithOverloads.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.bar","file":".","doc":"","url":"././~/Foo.bar.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.protectedProperty","file":".","doc":"","url":"././~/Foo.prototype.protectedProperty.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.readonlyProperty","file":".","doc":"","url":"././~/Foo.prototype.readonlyProperty.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.foo","file":".","doc":"","url":"././~/Foo.prototype.foo.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.\"&gt;&lt;img src=x onerror=alert(1)&gt;","file":".","doc":"","url":"././~/Foo.prototype.\"><img src=x onerror=alert(1)>.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Foobar","file":".","doc":"```ts\n// This code block is ignored when getting the title of this doc\nconst foobar = new Foobar();\n```\n\nFoobar docs\n\n# heading\n\ncontent\n\n## sub heading\n","url":"././~/Foobar.html","deprecated":false},{"kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"Hello","file":".","doc":"","url":"././~/Hello.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.optionalMethod","file":".","doc":"","url":"././~/Hello.optionalMethod.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.computedMethod","file":".","doc":"","url":"././~/Hello.computedMethod.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.world","file":".","doc":"","url":"././~/Hello.world.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.test","file":".","doc":"Some docs","url":"././~/Hello.test.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.ab","file":".","doc":"","url":"././~/Hello.ab.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.x","file":".","doc":"","url":"././~/Hello.x.html","deprecated":false},{"kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"InterfaceWithIndexSignature","file":".","doc":"","url":"././~/InterfaceWithIndexSignature.html","deprecated":false},{"kind":[{"char":"c","kind":"Class","title":"Class"},{"char":"N","kind":"Namespace","title":"Namespace"}],"name":"Testing","file":".","doc":"","url":"././~/Testing.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.t","file":".","doc":"","url":"././~/Testing.t.html","deprecated":false},{"kind":[{"char":"T","kind":"TypeAlias","title":"Type Alias"}],"name":"TypeAlias","file":".","doc":"","url":"././~/TypeAlias.html","deprecated":false},{"kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"anotherVariable","file":".","doc":"","url":"././~/anotherVariable.html","deprecated":false},{"kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"anotherVariable.bar","file":".","doc":"","url":"././~/anotherVariable.bar.html","deprecated":false},{"kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"anotherVariable.foo","file":".","doc":"","url":"././~/anotherVariable.foo.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"c","file":".","doc":"","url":"././~/c.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"d","file":".","doc":"","url":"././~/d.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"functionWithOptionalParameters","file":".","doc":"","url":"././~/functionWithOptionalParameters.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"},{"char":"f","kind":"Function","title":"Function"},{"char":"f","kind":"Function","title":"Function"}],"name":"qaz","file":".","doc":"content\n","url":"././~/qaz.html","deprecated":false},{"kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"someVariable","file":".","doc":"","url":"././~/someVariable.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.x","file":"c","doc":"","url":"./c/~/Testing.x.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"},{"char":"f","kind":"Function","title":"Function"},{"char":"f","kind":"Function","title":"Function"}],"name":"x","file":"c","doc":"","url":"./c/~/x.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.externalFunction","file":"d","doc":"","url":"./d/~/Testing.externalFunction.html","deprecated":false},{"kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"externalFunction","file":"d","doc":"","url":"./d/~/externalFunction.html","deprecated":false},{"kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"default","file":"foo","doc":"The default export item.\n\nThis item reproduces the issue reported in {@link https://github.com/jsr-io/jsr/issues/459}","url":"./foo/~/default.html","deprecated":false}]};
})()
